// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callout should render successful with alert 1`] = `
<div>
  <div class="callout callout-alert"
    role="callout">
    <div class="callout-header">Alert:
    </div>
    <div class="callout-content">An alert type callout</div>
  </div>
</div>
`;

exports[`callout should render successful with warning 1`] = `
<div>
  <div class="callout callout-warning"
    role="callout">
    <div class="callout-header">Warning:
    </div>
    <div class="callout-content">An warning type callout</div>
  </div>
</div>
`;

exports[`callout should show error when enter invalid type. 1`] = `
<div>
  shortcodes/callout.md: Invalid callout&#39;s type &#39;invalid&#39;. Expecting one of &#39;alert warning&#39;
</div>
`;

exports[`callout should show error when missing type parameter. 1`] = `
<div>
  shortcodes/callout.md: Invalid callout&#39;s type &#39;%!s(&lt;nil&gt;)&#39;. Expecting one of &#39;alert warning&#39;
</div>
`;
